--- a/locales/ru/devices.json
+++ b/locales/ru/devices.json
@@ -1,5 +1,18 @@
 {
+  "page": "Устройства",
   "chooseDevice": "Выберите устройство",
+  "info": {
+    "tab": "Информация"
+  },
+  "programs": {
+    "tab": "Программы"
+  },
+  "tasks": {
+    "tab": "Задачи"
+  },
+  "incidents": {
+    "tab": "Инциденты"
+  },
   "list": {
     "search": "Поиск",
     "deviceType": "Тип устройства",
