Devices info tables

--- a/locales/ru/devices.json
+++ b/locales/ru/devices.json
@@ -2,7 +2,50 @@
   "page": "Устройства",
   "chooseDevice": "Выберите устройство",
   "info": {
-    "tab": "Информация"
+    "tab": "Устройства Информация",
+    "resume": {
+      "title": "Резюме",
+      "list": [{ "label": "Название" }, { "label": "Тип устройства" }]
+    },
+    "main": {
+      "title": "Основное",
+      "list": [
+        { "label": "ОС" },
+        { "label": "Домен/Имя компьютера" },
+        { "label": "Хост" },
+        { "label": "Производитель и модель" }
+      ]
+    },
+    "usb": {
+      "title": "Устройства USB",
+      "list": []
+    },
+    "agent": {
+      "title": "Агент",
+      "actions": [{ "label": "Выпустить сертификат" }, { "label": "Cкачать агент" }]
+    },
+    "equipment": {
+      "title": "Оборудование",
+      "list": [
+        { "label": "Процессор" },
+        { "label": "ОЗУ" },
+        { "label": "Видеосистема" },
+        { "label": "Накопитель" }
+      ]
+    },
+    "name": "Название",
+    "deviceType": "Тип устройства",
+    "router": "Маршрутизатор",
+    "issueCertificate": "Выпустить сертификат",
+    "downloadAgent": "Cкачать агент",
+    "os": "ОС",
+    "domain": "Домен/Имя компьютера",
+    "host": "Хост",
+    "manufacturer": "Производитель и модель",
+    "cpu": "Процессор",
+    "ozu": "ОЗУ",
+    "videoSystem": "Видеосистема",
+    "storageDevice": "Накопитель"
   },
   "programs": {
     "tab": "Программы"
