--- a/locales/ru/system.json
+++ b/locales/ru/system.json
@@ -8,5 +8,11 @@
   "reboot": "Перезагрузить",
   "reboot-reset": "Перезагрузка системы",
   "renewal": "обновление",
-  "version-system": "Версия системы"
+  "version-system": "Версия системы",
+  "login-pass": "Смена авторизационных данных",
+  "login": "Логин",
+  "password": "Пароль",
+  "save": "Сохранить",
+  "connection": "Подключение к серверу",
+  "connect": "Подключиться"
 }
